# pycpfcnpj

./: .coverage  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  calculation.py  cnpfj.py  cnpj.py  cpf.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yaml  testing.yaml
docs/: Makefile
docs/source/: code.rst  conf.py  examples.rst  index.rst
pycpfcnpj/: __init__.py  calculation.py  cnpj.py  compatible.py  cpf.py  cpfcnpj.py  gen.py  mask.py
tests/: calculation_tests.py  cnpfj.py_tests.py  cnpfj_tests.py  cnpj_tests.py  cpf_tests.py  cpfcnpj_tests.py  format_tests.py  gen_test.py  mask_tests.py  test_calculation.py  test_cnpj.py  test_cpf.py
